2009-08-12 Steffen Neumann <sneumann@@ipb-halle.de>
	* Fixed plotEICs for 1 peak groups
2009-06-03 Steffen Neumann <sneumann@@ipb-halle.de>
        * Add adduct labels to plotPeaks()
        * Add adduct labels to plotEICs()
2009-05-22 Steffen Neumann <sneumann@@ipb-halle.de>
        * Add first visualisation function plotEICs() and plotPeaks()
2009-05-06 ckuhl    <ckuhl@ipb-halle.de>
        * bump for devel 2.5
2009-03-30 ckuhl    <ckuhl@ipb-halle.de>
        * add combine_xsanno
        * small refactoring
        * changes in scoring schemata
2009-03-18 ckuhl	<ckuhl@ipb-halle.de>
	* after groupCorr every peak is now member of a group
        * bugfix: remove xM-xH clones
        * remove dependency on Hmisc
2009-03-10 ckuhl	<ckuhl@ipb-halle.de>
	* speed-up of findAdducts
2009-02-24 ckuhl        <ckuhl@ipb-halle.de>
        * refactoring findAdducts
        * add methods for pos/neg polarity comparison
2009-02-20 ckuhl        <ckuhl@ipb-halle.de>
        * replace na.omit with naOmit
2009-02-18 ckuhl	<ckuhl@ipb-halle.de>
	* add neutral losses into ruleset
	* other bugfixes
2009-01-19 ckuhl	<ckuhl@ipb-halle.de>
	* Change isotope nomination
	* add lists for fragments, ions and neutral losses
2008-10-15  ckuhl	<ckuhl@ipb-halle.de>
	* Lot of bugfixes and speed up the correlation
2008-10-13  ckuhl	<ckuhl@ipb-halle.de>
	* First build for version 0.1.1
2007-10-12  sneumann  <sneumann@ipb-halle.de>
	* Inital release & collection of stuff