@@ -1,5 +1,5 @@
 Package: CAMERA
-Version: 1.1.3
+Version: 1.1.5
 Date: 2009-06-04
 Title: Collection of annotation related methods for mass spectrometry data 
 Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|rtautenh|sneumann}@ipb-halle.de
